<resources>
    <string name="app_name">ColorYourPhotograph</string>
    <string name="logo">logo</string>
    <string name="levelsOfDiffculty">مستوى الصعوبة</string>
    <string name="name">لون تصويرك</string>
    <string name="createColoringPage">انشاء صفحة تلوين</string>
    <string name="gallary">معرض الصور</string>
    <string name="confirmation">هل هذا ماتريده ؟</string>
    <string name="startColoring">ابدأ التلوين</string>
    <string name="back"> رجوع </string>
    <string name="imagesGallery"> معرض الصور</string>
    <string name="easy"> سهل </string>
    <string name="meduim"> متوسط </string>
    <string name="difficult"> متقدم </string>
    <string name="lines">تحسين خطوط الصورة</string>
    <string name="minLines">الحد الأدنى للخطوط</string>
    <string name="maxLines">الحد الأعلى للخطوط</string>
    <string name="empty_list_hint">لم يتم حفظ صوره حتى الان  </string>

    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="save">Save</string>
    <string name="paint">Paint</string>



    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>

</resources>
