<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".Home">

    <RelativeLayout
        android:id="@+id/relativelayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo5" />

        <ImageButton
            android:id="@+id/exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00ffffff"
            android:src="@drawable/exit1" />

        <ImageButton
            android:id="@+id/diff2"
            android:layout_width="40dp"
            android:layout_height="38dp"
            android:background="#00ffffff"
            android:rotation="-15"
            android:src="@drawable/l"
            android:layout_above="@+id/createColoringPage"
            android:layout_alignStart="@+id/logo" />

        <ImageButton
            android:id="@+id/coloring2"
            android:layout_width="30dp"
            android:layout_height="45dp"
            android:background="#00ffffff"
            android:rotation="-10"
            android:src="@drawable/c"
            android:layout_marginBottom="13dp"
            android:layout_above="@+id/gallery2"
            android:layout_alignStart="@+id/gallery2" />

        <ImageButton
            android:id="@+id/gallery2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00ffffff"
            android:src="@drawable/g"
            android:textStyle="bold"
            android:layout_alignTop="@+id/gallery"
            android:layout_toStartOf="@+id/gallery" />

        <Button
            android:id="@+id/difficultyLevels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/createColoringPage"
            android:layout_marginBottom="13dp"
            android:layout_toEndOf="@+id/diff2"
            android:background="#00ffffff"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:rotation="-15"
            android:text="@string/levelsOfDiffculty"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/createColoringPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="17dp"
            android:background="#00ffffff"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:rotation="-15"
            android:text="@string/createColoringPage"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_alignBottom="@+id/coloring2"
            android:layout_toEndOf="@+id/diff2"
            android:layout_marginStart="22dp" />

        <Button
            android:id="@+id/gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="45dp"
            android:background="#00ffffff"
            android:text="@string/gallary"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_alignParentBottom="true"
            android:layout_alignEnd="@+id/createColoringPage" />

    </RelativeLayout>
</LinearLayout>