<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sky"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".Levels">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/home1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginRight="30dp"
            android:background="#00ffffff"
            android:src="@drawable/h1" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/confirmation"
            android:textColor="#ffffff"
            android:textSize="36sp"
            android:textStyle="bold" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativelayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="18dp"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"/>

        <ImageView
            android:id="@+id/start_coloring"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:src="@drawable/small_wood"
            android:layout_alignTop="@+id/back"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true" />

        <TextView
            android:id="@+id/textViewStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="12dp"
            android:text="@string/startColoring"
            android:textColor="#ffffff"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginStart="16dp"
            android:layout_alignBaseline="@+id/textViewBack"
            android:layout_alignBottom="@+id/textViewBack"
            android:layout_alignStart="@+id/start_coloring" />

        <ImageView
            android:id="@+id/back"
            android:layout_width="160dp"
            android:layout_height="47dp"
            android:src="@drawable/small_wood2"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true" />

        <TextView
            android:id="@+id/textViewBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="9dp"
            android:text="@string/back"
            android:textColor="#ffffff"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_alignTop="@+id/start_coloring"
            android:layout_alignEnd="@+id/back"
            android:layout_marginEnd="47dp" />

        <ImageButton
            android:id="@+id/brush"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#00ffffff"
            android:src="@drawable/brush"
            android:layout_alignBottom="@+id/textViewStart"
            android:layout_toEndOf="@+id/textViewStart" />

    </RelativeLayout>
</LinearLayout>