<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sky"
    android:orientation="vertical"
    tools:context=".Threshed">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/home1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginRight="24dp"
            android:background="#00ffffff"
            android:src="@drawable/h1" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/lines"
            android:textColor="#ffffff"
            android:textSize="32sp"
            android:textStyle="bold" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativelayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/next"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/arrow"
            android:gravity="center"
            android:textColor="#ffffff"
            android:textSize="30sp"
            android:textStyle="bold" />


        <ImageButton
            android:id="@+id/help"
            android:layout_width="75dp"
            android:layout_height="55dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/help"
            android:onClick="showAlert" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/help"
            android:layout_alignParentStart="true"
            android:text="@string/minLines"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/seekBar1"
            android:text="@string/maxLines"
            android:textSize="20sp"
            android:textStyle="bold" />

        <SeekBar
            android:id="@+id/seekBar1"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView6"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="13dp"
            android:max="255"
            android:progressTint="@color/colorPrimaryDark"
            android:thumbTint="@color/colorPrimaryDark" />

        <SeekBar
            android:id="@+id/seekBar2"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/textView6"
            android:max="255"
            android:progressTint="@color/colorPrimaryDark"
            android:thumbTint="@color/colorPrimaryDark" />

        <ImageView
            android:id="@+id/img"
            android:layout_width="match_parent"
            android:layout_height="390dp"
            android:layout_above="@+id/textView5"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="12dp" />

    </RelativeLayout>
</LinearLayout>